# gfmodules-python-shared

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
app/: README.md  container.py  db.py  model.py  repository.py  service.py
docs/: schemas.md
gfmodules_python_shared/io/: container.py
gfmodules_python_shared/repository/: base.py  exceptions.py  repository_base.py  repository_factory.py  sql_model_descriptor.py
gfmodules_python_shared/schema/: base_model_schema.py  sql_model.py
gfmodules_python_shared/schema/pagination/: page_schema.py  pagination_query_params_schema.py
gfmodules_python_shared/session/: __init__.py  db_session.py  healthy.py  session_factory.py  session_manager.py
gfmodules_python_shared/utils/: validators.py
src/gfmodules_python_shared/repository/: exceptions.py  repository_base.py  repository_factory.py
src/gfmodules_python_shared/session/: db_session.py  session_factory.py  session_manager.py
tests/utests/: conftest.py  utils.py
tests/utests/repository/: conftest.py  test_repository.py
tests/utests/schema/: test_base_model_schema.py  test_pagination_query_params_schema.py  test_pagination_schema.py  test_sql_model.py
tests/utests/service/: test_hierarchy.py
tests/utests/session/: test_retry_policy.py  test_session_manager.py
